src/Main.scss
@import 'palette';
@import 'utils';

$bounce-curve: cubic-bezier(0.54, 0.35, 0, 3.21);

*:focus {
  outline: 2px solid $yell40;
  box-shadow: none;
  border-radius: 10px;
}

a {
  color: $linkColor;
  font-weight: 900;
  text-decoration-color: rgba($gray10, .54);
  text-decoration-thickness: .9em;
  text-underline-offset: 1.5px;
  transition: text-decoration-color 80ms ease;
  &:hover {
    text-decoration-color: rgba($gray10, .8);
    color: darken($linkColor, 2%);
  }
}

h1 {
  font-size: 68px;
}

h3 {
  font-size: 40px;
}

h4 {
  font-size: 30px;
  &.intro {
    margin-top: 0;
    margin-bottom: -10px;
    font-weight: 400;
  }
}

p {
  font-size: 22px;
  line-height: 1.77;
}

section {
  max-width: $sizing-xxxl;
  margin: 0 auto;
}

button {
  border: none;
  background-color: rgba($gray10, .1);
  padding: $spacing-lg $spacing-xxxl;
  border-radius: $border-radius-button;
  font-size: 18px;
  font-weight: 900;
  color: $gray10;
  letter-spacing: 1px;
  cursor: pointer;
  transform: scale(1);
  transition: background-color 100ms ease,
    transform 180ms $bounce-curve;
  &:hover {
    background-color: rgba($gray10, .12);
    transform: scale(1.02);
    text-decoration: none;
  }
  &:active {
    transform: scale(.99);
    outline: none;
  }
}

.page {
  background-color: $backgroundColor;
  min-height: 100vh;
  @include tablet {
    padding: 0 28px;
  }
}

.narrow {
  max-width: $tablet-width;
  margin: 0 auto;
}

.hero {
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: 60vh;
  max-width: $tablet-width;
  margin: 0 auto;
}

.primary {
  color: $primary;
}

.flex-holster {
  display: flex;
  flex-wrap: wrap;
  .half {
    width: calc(50% - 2px);
    @include tablet {
      width: 100%;
    }
  }
  .quarter {
    width: calc(25% - 2px);
    @include tablet {
      width: 100%;
    }
  }
  .item {
    padding: $spacing-xxl;
    text-align: center;
    margin-bottom: $spacing-xxxl;

    @include phone {
      padding: 0;
    }

    .logo {
      height: 100px;
      opacity: .77;
      transition: opacity 100ms ease;
    }
    h3 {
      margin: $spacing-xl 0 0;
    }
    button {
      margin-top: 10px;
      @include phone {
        padding: 24px;
        margin-bottom: 32px;
      }
    }
  }
}

.center {
  text-align: center;
}

#work {
  margin-top: $sizing-xs;
}

